# $Id: Makefile.am,v 1.31 2009/11/04 01:44:50 sbajic Exp $

EXTRA_DIST =            \
        nav_alerts.html \
        nav_error.html \
        nav_performance.html \
        nav_preferences.html \
        nav_quarantine.html \
        nav_viewmessage.html \
        nav_analysis.html \
        nav_history.html \
        nav_admin_error.html \
        nav_admin_status.html \
        nav_admin_user.html \
        nav_admin_preferences.html \
	nav_fragment.html \
	strings.pl
