# $Id: Makefile.am,v 1.1 2010/07/19 21:15:01 sbajic Exp $

EXTRA_DIST =            \
        nav_alerts.html \
        nav_error.html \
        nav_performance.html \
        nav_preferences.html \
        nav_quarantine.html \
        nav_viewmessage.html \
        nav_analysis.html \
        nav_history.html \
        nav_admin_error.html \
        nav_admin_status.html \
        nav_admin_user.html \
        nav_admin_preferences.html \
	nav_fragment.html \
	strings.pl
